# oo7

./: .rustfmt.toml  Cargo.toml  README.md  coverage.sh  deny.toml
.github/workflows/: CI.yml  coverage.yml  deploy.yml
cargo-credential/src/: main.rs
cli/: Cargo.toml
cli/src/: main.rs
client/: Cargo.toml
client/examples/: file_tracing.rs  schema.rs
client/src/: keyring.rs  lib.rs  migration.rs  secret.rs
client/src/crypto/: error.rs  native.rs
client/src/dbus/: service.rs
client/src/file/: error.rs  locked_keyring.rs  mod.rs  unlocked_keyring.rs
client/src/file/api/: mod.rs
client/tests/: dbus_collection.rs  dbus_item.rs  dbus_service.rs  file_unencrypted_keyring.rs  file_unlocked_keyring.rs  keyring.rs
git-credential/src/: main.rs
kwallet/cli/: Cargo.toml  README.md
kwallet/cli/src/: main.rs
kwallet/parser/: Cargo.toml  README.md
kwallet/parser/src/: crypto.rs  error.rs  format.rs  lib.rs  qdata.rs  secret_service.rs  wallet.rs
kwallet/parser/tests/: README.md  blowfish_cbc_pbkdf2_sha512.rs  blowfish_cbc_pbkdf2_sha512_manual.kwl  blowfish_cbc_pbkdf2_sha512_manual.salt  blowfish_ecb_sha1.rs
pam/src/: protocol.rs  socket.rs
portal/src/: main.rs
python/src/: lib.rs
server/: Cargo.toml
server/data/: oo7-daemon.service.in
server/po/: LINGUAS  POTFILES.in  bg.po  ka.po  pt_BR.po  ru.po  sl.po  sr.po
server/src/: capability.rs  control.rs  error.rs  lib.rs  main.rs  migration.rs  session.rs  tests.rs
server/src/collection/: mod.rs  tests.rs
server/src/gnome/: internal.rs  prompter.rs  secret_exchange.rs
server/src/item/: mod.rs  tests.rs
server/src/pam_listener/: mod.rs  tests.rs
server/src/plasma/: prompter.rs
server/src/prompt/: mod.rs  tests.rs
server/src/service/: mod.rs  tests.rs  unencrypted_tests.rs
