[workspace]
resolver = "3"

members = [
  "cargo-credential",
  "client",
  "cli",
  "git-credential",
  "kwallet/cli",
  "kwallet/parser",
  "macros",
  "pam",
  "portal",
  "python",
  "server",
]

[workspace.package]
version = "0.6.0-alpha"
edition = "2024"
authors = ["Bilal Elmoussaoui", "Sophie Herold", "Maximiliano Sandoval"]
keywords = ["keyring", "secret", "service", "portal", "keychain"]
categories = ["os::linux-apis", "os", "api-bindings"]
repository = "https://github.com/linux-credentials/oo7"
homepage = "https://github.com/linux-credentials/oo7"
license = "MIT"
rust-version = "1.95"
exclude = ["org.freedesktop.Secrets.xml"]

[workspace.dependencies]
ashpd = { version = "0.13", default-features = false }
base64 = "0.22"
cbc = "0.2"
clap = { version = "4.5", features = ["cargo", "derive"] }
endi = "1.1"
futures-channel = "0.3"
futures-lite = "2.6"
futures-util = "0.3"
hkdf = "0.13"
libc = "0.2"
md-5 = "0.11"
num = "0.4.0"
num-bigint-dig = { version = "0.9", features = ["zeroize"] }
oo7 = { path = "client", version = "0.6.0-alpha", default-features = false, features = ["unstable", "tracing"] }
openssl = "0.10"
pbkdf2 = { version = "0.13", default-features = false }
rpassword = "7.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
sha2 = "0.11"
tempfile = "3.26"
tokio = { version = "1.52", default-features = false }
tracing = "0.1"
tracing-subscriber = "0.3"
zbus = { version = "5.14.0", default-features = false }
zbus_macros = { version = "5.11", features = ["gvariant"] }
zeroize = { version = "1", features = ["zeroize_derive"] }
zvariant = { version = "5.8", default-features = false, features = ["gvariant", "serde_bytes"] }
