[package]
name = "oo7"
description = "James Bond went on a new mission and this time as a Secret Service provider"
categories.workspace = true
keywords.workspace = true
authors.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
aes = { version = "0.9", features = ["zeroize"], optional = true }
ashpd = { workspace = true, features = ["secret"] }
async-fs = { version = "2.2", optional = true }
async-io = { version = "2.6", optional = true }
async-lock = { version = "3.4", optional = true }
blocking = { version = "1.5", optional = true }
cbc = { workspace = true, features = ["zeroize"], optional = true }
endi.workspace = true
futures-lite = { workspace = true, optional = true }
futures-util.workspace = true
getrandom = "0.4"
hkdf = { workspace = true, optional = true }
md-5 = { workspace = true, optional = true }
num.workspace = true
num-bigint-dig.workspace = true
oo7-macros = { path = "../macros", version = "0.6.0-alpha", optional = true }
openssl = { workspace = true, optional = true }
pbkdf2 = { workspace = true, optional = true, features = ["hmac"] }
serde.workspace = true
serde_bytes = "0.11"
sha2 = { workspace = true, optional = true }
subtle = { version = "2.5", optional = true }
tokio = { workspace = true, features = [
    "sync",
    "fs",
    "io-util",
], optional = true, default-features = false }
tracing = { workspace = true, optional = true }
zbus.workspace = true
zbus_macros.workspace = true
zvariant.workspace = true
zeroize.workspace = true

[dev-dependencies]
oo7-daemon = { path = "../server", features = ["test-util"], default-features = false, version = "0.6.0-alpha" }
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }

[features]
default = ["tokio", "native_crypto"]
# Enables unstable low-level API
unstable = []
async-std = [
    "zbus/async-io",
    "dep:async-fs",
    "dep:async-io",
    "dep:async-lock",
    "dep:blocking",
    "dep:futures-lite",
    "ashpd/async-io",
]
tokio = ["zbus/tokio", "dep:tokio", "ashpd/tokio"]
native_crypto = [
    "dep:aes",
    "dep:cbc",
    "dep:hkdf",
    "dep:md-5",
    "dep:pbkdf2",
    "dep:sha2",
    "dep:subtle",
    "oo7-daemon/native_crypto",
]
openssl_crypto = [
    "dep:openssl",
    "oo7-daemon/openssl_crypto",
]
tracing = ["dep:tracing", "ashpd/tracing"]
schema = ["dep:oo7-macros"]

[package.metadata.docs.rs]
features = ["unstable"]
rustdoc-args = ["--generate-link-to-definition"]

[[example]]
name = "basic"
path = "examples/basic.rs"
required-features = ["tokio"]

[[example]]
name = "basic_2"
path = "examples/basic_2.rs"
required-features = ["tokio"]

[[example]]
name = "dbus_service"
path = "examples/dbus_service.rs"
required-features = ["tokio"]

[[example]]
name = "file_tracing"
path = "examples/file_tracing.rs"
required-features = ["tokio", "tracing"]

[[example]]
name = "schema"
path = "examples/schema.rs"
required-features = ["tokio", "schema"]
