[package]
name = "kwallet-cli"
description = "CLI tool for reading KWallet files"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
kwallet-parser = { version = "0.6.0-alpha", path = "../parser" }
oo7 = { workspace = true, features = ["tokio", "native_crypto"] }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rpassword = "7.3"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
